Refactoring components and CSS style Scroll bar style Mobile device checking

--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "faker": "^4.1.0",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-device-detect": "^1.12.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
-    "prop-types": "^15.7.2"
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
