Added deploy configurations

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "wpp-clone-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://gilmarllen.github.io/wpp-clone",
   "dependencies": {
     "@material-ui/core": "^4.9.12",
     "@material-ui/icons": "^4.9.1",
@@ -20,7 +21,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "eslint": "eslint src/**/*.jsx src/**/*.js --fix"
+    "eslint": "eslint src/**/*.jsx src/**/*.js --fix",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -46,6 +49,7 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.1",
+    "gh-pages": "^2.2.0",
     "prettier": "^2.0.5"
   }
 }
